--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-nunjucks": "^3.0.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "uglify-js": "^2.7.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
