--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-nunjucks": "^3.0.0",
     "gulp-sass": "^3.1.0",
+    "gulp-svg-sprite": "^1.3.6",
+    "normalize-scss": "^6.0.0",
     "uglify-js": "^2.7.5"
   },
   "scripts": {
