--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-nunjucks": "^3.0.0",
     "gulp-sass": "^3.1.0",
